@@ -5,5 +5,3 @@ license           = CC0_1_0
 copyright_holder  = Christian Walde
 
 [@MITHALDU]
-gitignore = /Dist-Zilla-PluginBundle-MITHALDU-*
-exclude_match = ^Dist-Zilla-PluginBundle-MITHALDU-
